<resources>
    <string name="app_name">Cardiart Connect</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string-array name="search_by">
        <item> Name</item>
        <item> Id</item>


    </string-array>
    <string name="age">Age (Years)</string>
    <string name="sex">Sex</string>
    <string name="gender">Gender</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="set_name">Set Name</string>
    <string name="set_id">Set Patient Id</string>
    <string name="set_age">Set Age</string>
    <string name="set_height">Set Height</string>
    <string name="set_weight">Set Weight</string>
    <string name="set_pat_ref_doc">Set Reference Doc</string>
    <string name="set_cons_ref_doc">Set Consultation Doc</string>
    <string name="set_systolic">Set Systolic Pressure</string>
    <string name="set_diabolic">Set Diabolic Pressure</string>
    <string name="set_pat_drug1">Set Patient Drug1</string>
    <string name="set_pat_drug2">Set Patient Drug2</string>
    <string name="set_pat_race">Set Patient Race</string>
    <string name="set_pacemaker_presence">Set Patient PC</string>
    <string name="set_clinic_diagnosis">Set Clinical Diagnosis</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome_user">Welcome User</string>
    <string name="profile">Profile</string>
    <string name="members">Members</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="forget_password">Forgot Password</string>
    <string name="success_regist">Successful Registration</string>
    <string name="security_ver">Enter the Security Questions for verification</string>
    <string name="security_question_1">Enter your favourite color</string>
    <string name="security_question_2">Enter your birthplace</string>
    <string name="security_question_3">Enter your mother\'s maiden name</string>
    <string name="security_question_3_">Enter your mother\'s maiden \nname</string>
    <string name="hosp_name">Hospital Name</string>
    <string name="hosp_id">Hospital Id</string>
    <string name="hosp_phone">Hospital Phone</string>
    <string name="hosp_address">Hospital Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="proceed">Proceed</string>
    <string name="background_image">Background Image</string>
    <string name="back">Back key</string>
    <string name="base_header_title">Base header title</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="user_guide_">User Guide</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="password">Password</string>
    <string name="security_ques">Security Question</string>
    <string name="submit">SUBMIT</string>
    <string name="update">UPDATE</string>
    <string name="header">Header</string>
    <string name="ch_opt">Choose Options</string>
    <string name="per_nec">Permissions are Necessary</string>
    <string name="reset">RESET</string>
    <string name="def">Default</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="field_empty">This field cannot be empty</string>
    <string name="hint_ent_new_pw">Enter your new Password</string>
    <string name="hint_conf_new_pw">Confirm your new Password</string>
    <string name="hint_ent_user_id">Enter your registered email id</string>
    <string name="email_n_reg">Email id not registered</string>
    <string name="conf_pw">Confirm Password</string>
    <string name="sign_other_user">Sign Up as Other User</string>
    <string name="sign_new_user">Sign As as New User</string>
    <string name="sign_as_other_user">Sign As as Other User</string>
    <string name="new_user">Create New Patient</string>
    <string name="existing_user">Select Any Existing Patient</string>
    <string name="selection">Choose Any</string>
    <string name="t_and_c">Terms And Condition</string>
    <string name="signed_t_and_c">I have read the Terms and Conditions</string>
    <string name="bp_general_knowledge">The American Heart Association recommends home monitoring
        for all people with high blood pressure to help the healthcare provider determine
        whether treatments are working. Home monitoring (self-measured blood pressure)
        is not a substitute for regular visits to your physician. If you have been prescribed
        medication  to lower your blood pressure, don\'t stop taking your medication without
        consulting your doctor, even if your blood pressure readings are in the normal range during home monitoring.\n\n

Choosing a home blood pressure monitor\n\n
<b>The American Heart Association recommends an automatic, cuff-style, bicep (upper-arm) monitor.</b>\n\n

Wrist and finger monitors are not recommended because they yield less reliable readings.
Choose a monitor that has been validated. If you are unsure, ask your doctor or pharmacist for advice.
When selecting a blood pressure monitor for a senior, pregnant woman or child, make sure it is validated for these conditions.
Make sure the cuff fits — measure around your upper arm and choose a monitor that comes with the correct size cuff.\n\n



<b>Blood pressure categories</b>
The five blood pressure ranges as recognized by the American Heart Association are:

<b>Normal blood pressure</b>\n\n
Congratulations on having blood pressure numbers that are within the normal
        (optimal) range of less than 120/80 mm Hg. Keep up the good work and
        stick with heart-healthy habits like following a balanced diet and getting regular exercise.\n\n

<b>Prehypertension (early stage high blood pressure)</b>\n\n
Prehypertension is when blood pressure is consistently ranging from 120-139/80-89 mm Hg.
        People with prehypertension are likely to develop high blood pressure unless steps are taken to control it.\n\n

<b>Hypertension Stage 1</b>\n\n
Hypertension Stage 1 is when blood pressure is consistently
        ranging from 140-159/90-99 mm Hg.
        At this stage of high blood pressure,
        doctors are likely to prescribe lifestyle
        changes and may consider adding blood pressure medication.\n\n

<b>Hypertension Stage 2</b>\n\n
Hypertension Stage 2 is when blood pressure is
        consistently ranging at levels greater than 160/100 mm Hg.
        At this stage of high blood pressure, doctors are likely to prescribe a
        combination of blood pressure medications along with lifestyle changes.\n\n

<b>Hypertensive crisis</b>\n\n

This is when high blood pressure requires emergency medical attention.
        If your blood pressure is higher than 180/110 mm Hg and you are NOT
        experiencing symptoms such as chest pain, shortness of breath, back pain,
        numbness/weakness, changes in vision or difficulty speaking, wait about five
        minutes and take it again. If the reading is still at or above that level,
        you should CALL 9-1-1 and get help immediately. Learn more about the two
        types of hypertensive crises.\n\n

    </string>
    <string name="hospital_icon">Hospital icon</string>
    <string name="pat_name">Patient Name</string>
    <string name="pat_race">Patient Race</string>
    <string name="pat_id">Patient Id</string>
    <string name="pat_id_">Patient Id :</string>
    <string name="pat_drug1">Patient Drug1</string>
    <string name="pat_drug2">Patient Drug2</string>
    <string name="pat_pc">Pat Pacemaker</string>
    <string name="pat_clinical_diag">Clinical Diagnosis</string>
    <string name="pat_sys">Pat Systolic(mmHg)</string>
    <string name="pat_dia">Pat Diabolic(mmHg)</string>
    <string name="pat_cons_doc">Consultation Doc Name</string>
    <string name="pat_ref_doc">Ref Doc Name</string>
    <string name="view_arch_rec">VIEW ARCHIVED \n RECORDS</string>
    <string name="import_rec_gen">IMPORT RECORDS FROM \n BPL CARDIART GENX3</string>
    <string name="start_rt_ecg">START REAL TIME \n MEASUREMENT</string>
    <string name="ecg">ECG</string>
    <string name="email_n_empty">Email id cannot be empty</string>
    <string name="pwd_n_empty"> Password cannot be empty</string>
    <string name="log_out_confirm">Do you want to Log Out from the App ?</string>
    <string name="sort_age">Sort By Age</string>
    <string name="sort_name">Sort By Name</string>
    <string name="sort_id">Sort By ID</string>
    <string name="del">Delete</string>
    <string name="patient">Patient</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
        <string name="search_by_name">Search By Name</string>
    <string name="search_by_id">Search By Id</string>
        <string-array name="patient_race">
            <item>Caucasian</item>
            <item>AFRO_ORIGIN</item>
            <item>Oriental</item>
            <item>Other</item>
            <item>Unknown</item>

        </string-array>
    <string name="choose_color">Choose Color</string>
    <string-array name="color_picker">
        <item>Pink</item>
        <item>Orange </item>
        <item>Cyan</item>


    </string-array>
    <string-array name="grid_type">
        <item>Minor</item>
        <item>Major </item>
        <item>Minor+Major</item>

        <item>Off</item>

    </string-array>
    <string-array name="report_details">
        <item>1 PG</item>
        <item>2 PG </item>
        <item>3 PG</item>

    </string-array>
    <string-array name="ecg_format">
        <item>12X1</item>
        <item>6X2</item>
        <item>3X4</item>

        <item>6X2 +3R</item>
        <item>3X4 +1R</item>


    </string-array>
    <string-array name="ecg_trace_gain">
        <item>2.5 mm/mV</item>
        <item>5 mm/mV</item>
        <item>10 mm/mV</item>

    </string-array>
    <string name="ecg_trace_speed">Ecg Trace Speed</string>
    <string-array name="ecg_trace_filter">
        <item>ADF</item>
        <item>MUS</item>
        <item>ADF + MUS</item>
        <item>OFF</item>
    </string-array>
    <string name="share_png">Share as .PNG File</string>
    <string name="share_hl">Share as HL7</string>
    <string name="save_png">Save as .PNG File</string>
    <string name="save_pdf">Save as PDF File</string>
    <string name="save_hl">Save as HL7</string>
    <string name="report">Report</string>
    <string name="hosp_profile">Hospital Profile</string>
    <string name="cust_display">Customize Display</string>
    <string name="config_ftp">Configure FTP Server</string>
    <string name="maintain_chks">Maintenance Checks</string>
    <string name="manage_pat">Manage Patients</string>
    <string name="about">About</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="delete_marked">Delete All</string>
    <string name="select_all">Select All</string>
    <string name="department_name">Urology Department</string>
    <string name="hospital_name">Manipal Hospital</string>
    <string name="lead_switch">Lead Switch</string>
    <string name="adf_mus">ADF MUS :</string>
    <string name="gain">Gain :</string>
    <string name="v2">V2</string>
    <string name="v3">V3</string>
    <string name="v4_">V4</string>
    <string name="v5_">V5</string>
    <string name="v6_">V6</string>
    <string name="v1_">V1</string>
    <string name="start_">Start</string>
    <string name="la">LA</string>
    <string name="ll">LL</string>
    <string name="ra">RA</string>
    <string name="battery_status">Battery Status :</string>
</resources>