<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="30dp"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:text="@string/start_"
            android:textColor="@color/white"
            android:layout_weight="0.2"
            android:layout_margin="1dp"
            android:id="@+id/startTest"
            android:layout_height="30dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:text="HR :"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:text="patient id=323234"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/Time"

            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:id="@+id/battery"
            android:contentDescription="@string/battery_status"
            android:src="@drawable/ic_battery_20_black"


            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@+id/bottomBar"
        android:layout_below="@+id/topPanel">


        <include layout="@layout/six_by_2_ecg"

            />


        <LinearLayout
            android:id="@+id/errorBar"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/ra"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/v1_"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/v2"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/v3"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/v4_"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/v5_"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/v6_"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/la"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/ll"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/limits_text_color" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:visibility="visible"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:text="@string/lead_switch"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:text="@string/adf_mus"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/settings_bg"
            android:gravity="center"
            android:text="@string/gain"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>