<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="1dp"
    android:id="@+id/loginRelative"
    android:background="@color/separator"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="0.6"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/hosp_profile"
            android:scaleType="centerCrop"
            android:id="@+id/hospitalImage"
            android:src="@mipmap/hosp_img" />


    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:gravity="center"
        android:layout_height="55dp">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/department_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:paddingStart="5dp"
            android:gravity="center_vertical"
            android:id="@+id/departName"
            android:paddingEnd="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/hospital_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:paddingStart="5dp"
            android:gravity="center_vertical"
            android:id="@+id/hospName"
            android:paddingEnd="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@color/grey_bg"
        android:id="@+id/topBar"
        android:layout_weight="0.01"
        android:layout_height="wrap_content"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/layout_bg"

            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"


            >


            <custom.view.RoundedImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:id="@+id/pixel"
                android:layout_marginStart="0dp"
                android:src="@drawable/user_icon" />

            <ImageView
                android:id="@+id/proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"

                android:contentDescription="@string/conf_pw"
                android:src="@mipmap/right_arrow" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="19dp"
                android:layout_toEndOf="@+id/pixel"
                android:gravity="start"
                android:text="@string/welcome_user"
               android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <TextView
            android:id="@+id/signAsOtherUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_margin="5dp"
            android:text="@string/sign_as_other_user" />
    </LinearLayout>



    <TextView
        android:id="@+id/signUpFresh"
        android:layout_width="match_parent"
        android:layout_height="35dp"

        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textSize="19sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        android:text="@string/sign_new_user" />

</LinearLayout>

